@@ -9,12 +9,30 @@ body#typo3-alt-file-navframe-php {
 	background: #ebebeb;
 }
 
+/**
+ * Shadow on the right side of the tree frame.
+ */
 #typo3-pagetree #typo3-docbody,
 #typo3-alt-file-navframe-php #typo3-docbody {
 	-moz-box-shadow: inset -2px 0 1px #c4c4c4;
 	-ms-box-shadow: inset -2px 0 1px #c4c4c4;
 	-webkit-box-shadow: inset -2px 0 1px #c4c4c4;
 	box-shadow: inset -2px 0 1px #c4c4c4;
+}
+
+/**
+ * Shadow on the right side of the tree frame,
+ * fallback for missing box-shadow support.
+ *
+ * @see modernizr.js
+ */
+.no-boxshadow #typo3-pagetree #typo3-docbody,
+.no-boxshadow #typo3-alt-file-navframe-php #typo3-docbody {
+	background-image: url("data:image/png;base64,R0lGODlhAgABAIAAAMjIyLOzsyH5BAAAAAAALAAAAAACAAEAAAICRAoAOw==");
+	/* star-hack targets IE6+7 */
+	*background-image: url("../../images/backgrounds/module-menu-right.png");
+	background-position: right;
+	background-repeat: repeat-y;
 }
 
 table#typo3-tree a {
